--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ sass:
 # Site Data
 url: # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: # the subpath of your site, e.g. /blog
-title: Simple Texture
-description: "A gem-based responsive simple texture styled Jekyll theme."
+title: Cances ' Blog
+description: "A Simple Network Security Enthusiast."
 keywords: 'jekyll,theme,gem-based,blog'
 author:
   name:
@@ -35,7 +35,7 @@ author:
     - name: facebook
       url:
     - name: github
-      url: https://github.com/yizeng/jekyll-theme-simple-texture
+      url: https://github.com/2357000166/
     - name: instagram
       url:
     - name: linkedin
@@ -47,13 +47,13 @@ author:
     - name: vk
       url:
 home:
-  section1: <h1>Simple Texutre</h1>
-  section2: <h2>A gem-based responsive simple texture styled Jekyll theme</h2>
-  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
+  section1: <h1>Cances ' Blog</h1>
+  section2: <h2>A Simple Network Security Enthusiast</h2>
+  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/2357000166/" title="View on GitHub"></a></div>
 blog:
   cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
   cc_license_image: /assets/images/theme/cc-by-sa.png # An image of your CC License. 
-  footer_content: A gem-based responsive simple texture styled <a href="http://jekyllrb.com/">Jekyll</a> theme.
+  footer_content: Powere By <a href="https://github.com/2357000166/">Cances</a>.
 
 disqus:
   shortname: # e.g. yizeng
