--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -25,7 +25,7 @@ en: &en
   show_comments: 'Show Comments'
   show_license: 'Show License'
   tags: 'Tags'
-  theme_info: ''
+  theme_info: '<p><small>原创文章,转载请保留或注明出处</small></p>'
   tools: 'Tools'
   view: 'View'
 en-us:
@@ -66,7 +66,7 @@ zh: &zh
   show_comments: '显示评论'
   show_license: '显示许可证'
   tags: '文章标签'
-  theme_info: ''
+  theme_info: '<p><small>原创文章,转载请保留或注明出处</small></p>'
   tools: '工具'
   view: '查阅'
 zh-cn:
