--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
     - name: facebook
       url:
     - name: github
-      url: https://github.com/2357000166/
+      url: 
     - name: instagram
       url:
     - name: linkedin
@@ -49,7 +49,7 @@ author:
 home:
   section1: <h1>Cances ' Blog</h1>
   section2: <h2>A Simple Network Security Enthusiast</h2>
-  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/2357000166/" title="View on GitHub"></a></div>
+  section3: #<div class="social-links"><a class="ico-github btn" href="https://github.com/2357000166/" title="View on GitHub"></a></div>
 blog:
   cc_license: #http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
   cc_license_image: #/assets/images/theme/cc-by-sa.png # An image of your CC License. 
