--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 encoding: UTF-8
 exclude: ["*.gem", "*.gemspec", "Gemfile", "Gemfile.lock", "node_modules", "Rakefile", "starter-kit", "vendor"]
-lang: en # Language code as defined in _data/i18n.yml. en, en-gb, en-us, zh, zh-cn, zh-tw etc.
+lang: zh # Language code as defined in _data/i18n.yml. en, en-gb, en-us, zh, zh-cn, zh-tw etc.
 permalink: /blog/:year/:month/:day/:title/
 
 whitelist: [jekyll-feed, jekyll-redirect-from, jekyll-seo-tag, jekyll-sitemap]
@@ -24,7 +24,7 @@ sass:
 url: # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: # the subpath of your site, e.g. /blog
 title: Cances ' Blog
-description: "A Simple Network Security Enthusiast."
+description: ""
 keywords: 'jekyll,theme,gem-based,blog'
 author:
   name:
@@ -48,8 +48,8 @@ author:
       url:
 home:
   section1: <h1>Cances ' Blog</h1>
-  section2: <h2>A Simple Network Security Enthusiast</h2>
-  section3: #<div class="social-links"><a class="ico-github btn" href="https://github.com/2357000166/" title="View on GitHub"></a></div>
+  section2: <h2></h2>
+  section3: #<div class="social-links"><a class="ico-github btn" href="https://github.com/xxxx/" title="View on GitHub"></a></div>
 blog:
   cc_license: #http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
   cc_license_image: #/assets/images/theme/cc-by-sa.png # An image of your CC License. 
